Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82817

ASSERT: "scope != nullptr" when running qmllint -U on QML files in qtquickcontrols2

XMLWordPrintable

    • 3e57c56aa1d54ac4587284727ca9c952d33f3e43 afe20375bab3dea584c3b6c9bc5812da78f6618e 869efe4a49c5286493d7f039325992725bcac6c3 f726d237277de0f4c8f276d20a5bb1b6a8cd007c 1b5a6c19ab701c9b94b1ffb094999c34643bcd1d

      micurtis@QT-D-S4CX2350 MINGW64 /c/dev/qt5.15/qtquickcontrols2 ((88fa6ec6...))
      $ find . -name "*.qml" -exec /c/dev/qt5.15-d/qtbase/bin/qmllint -U {} \;
      Warning: unqualified access at 79:23
                      text: modelData
                            ^^^^^^^^^
      
      
      
      Warning: unqualified access at 86:39
                          source: "qrc:/" + modelData.replace(" ", "_") + ".png"
                                            ^^^^^^^^^
      
      
      
      Warning: unqualified access at 75:19
                  text: modelData
                        ^^^^^^^^^
      
      
      
      Warning: Property "StackView" not found on type "Page" at 79:29
                  onClicked: root.StackView.view.push("qrc:/ConversationPage.qml", { inConversationWith: modelData })
                                  ^^^^^^^^^
      Warning: unqualified access at 79:100
                  onClicked: root.StackView.view.push("qrc:/ConversationPage.qml", { inConversationWith: modelData })
                                                                                                         ^^^^^^^^^
      
      
      
      Warning: unqualified access at 83:35
                      source: "qrc:/" + modelData.replace(" ", "_") + ".png"
                                        ^^^^^^^^^
      
      
      
      Warning: Property "StackView" not found on type "Page" at 66:29
                  onClicked: root.StackView.view.pop()
                                  ^^^^^^^^^
      Warning: unqualified access at 71:19
                  text: inConversationWith
                        ^^^^^^^^^^^^^^^^^^
      Note: inConversationWith is a meber of the root element
            You can qualify the access with its id to avoid this warning:
                  text: root.inConversationWith
      
      
      
      Warning: Property "BottomToTop" not found on type "QQuickListView" at 86:47
                  verticalLayoutDirection: ListView.BottomToTop
                                                    ^^^^^^^^^^^
      Warning: unqualified access at 90:50
                      readonly property bool sentByMe: index % 2 == 0
                                                       ^^^^^
      
      
      
      Warning: unqualified access at 100:31
                          visible: !sentByMe
                                    ^^^^^^^^
      
      
      
      Warning: unqualified access at 106:28
                          color: sentByMe ? "lightgrey" : "steelblue"
                                 ^^^^^^^^
      
      
      
      Warning: Property "Wrap" not found on type "QtQuick.Controls/TextArea 2.0" at 130:40
                          wrapMode: TextArea.Wrap
                                             ^^^^
      Warning: unqualified access at 110:31
                              text: index
                                    ^^^^^
      
      
      
      Warning: unqualified access at 111:32
                              color: sentByMe ? "black" : "white"
                                     ^^^^^^^^
      
      
      
      warning: SqlContactModel was not found. Did you add all import paths?
      warning: SqlConversationModel was not found. Did you add all import paths?
      warning: SqlContactModel was not found. Did you add all import paths?
      warning: SqlConversationModel was not found. Did you add all import paths?
      Warning: unqualified access at 64:19
                  text: fullName
                        ^^^^^^^^
      
      
      
      Warning: unqualified access at 84:23
                      text: address
                            ^^^^^^^
      
      
      
      Warning: unqualified access at 96:23
                      text: city
                            ^^^^
      
      
      
      Warning: unqualified access at 108:23
                      text: number
                            ^^^^^^
      
      
      
      Warning: Property "Ok" not found on type "QtQuick.Controls/Dialog 2.1" at 85:29
          standardButtons: Dialog.Ok | Dialog.Cancel
                                  ^^
      Warning: Property "Cancel" not found on type "QtQuick.Controls/Dialog 2.1" at 85:41
          standardButtons: Dialog.Ok | Dialog.Cancel
                                              ^^^^^^
      ASSERT: "scope != nullptr" in file C:\dev\qt5.15\qtdeclarative\tools\qmllint\scopetree.cpp, line 147
      
      ---------------------------
      Microsoft Visual C++ Runtime Library
      ---------------------------
      Debug Error!
      
      Program: C:\dev\qt5.15-d\qtbase\bin\Qt5Cored.dll
      Module: 5.15.0
      File: C:\dev\qt5.15\qtdeclarative\tools\qmllint\scopetree.cpp
      Line: 147
      
      ASSERT: "scope != nullptr" in file C:\dev\qt5.15\qtdeclarative\tools\qmllint\scopetree.cpp, line 147
      
      (Press Retry to debug the application)
      
      ---------------------------
      Abort   Retry   Ignore   
      ---------------------------
      

      When I run qmllint on just that one file, it runs forever, but doesn't assert:

      /c/dev/qt5.15-d/qtbase/bin/qmllint -U /c/dev/qt5.15/qtquickcontrols2/src/imports/controls/Dialog.qml
      

        For Gerrit Dashboard: QTBUG-82817
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes